[package]
name = "keplr-sys"
version = "0.0.0"
authors = ["Kent"]
edition = "2021"
description = "Bindings for Keplr wallet API"
readme = "./README.md"
repository = "https://github.com/kent-3/keplr/tree/main/keplr-sys"
license = "Unlicense"

[dependencies]
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
