[package]
name = "keplr-sys"
version = "0.0.2"
authors = ["Kent"]
edition = "2021"
description = "Bindings for Keplr wallet API"
documentation = "https://docs.rs/keplr-sys"
readme = "./README.md"
repository = "https://github.com/kent-3/keplr/tree/main/keplr-sys"
license = "Unlicense"

[dependencies]
wasm-bindgen = "0.2.93"
wasm-bindgen-futures = "0.4.43"
