[package]
name = "keplr"
version = "0.1.0"
edition = "2021"

[dependencies]
keplr-sys = { path = "../keplr-sys" }

js-sys = "0.3.69"
web-sys = { version = "0.3.70", features = ["console"] }

base64 = "0.22.1"
serde = { version = "1.0.208", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
thiserror = "1.0.63"
