[package]
name = "keplr"
version = "0.1.0"
edition = "2021"

[dependencies]
keplr-sys = "*"

async-trait = "0.1.81"
futures = "0.3.30"
send_wrapper = { version = "0.6.0", features = ["futures"] }
base64 = "0.22.1"
serde = { version = "1.0.208", features = ["derive"] }
serde-wasm-bindgen = "0.6.5"
tracing = "0.1.40"
thiserror = "1.0.63"
web-sys = { version = "0.3.70", features = ["console", "Window"] }

# rsecret = { path = "../../secret-clients/rsecret/" }
# secretrs = "0.1.0"
